--- a/app/.env.local
+++ b/app/.env.local
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_GATEWAY_URL=https://pink-major-beaver-842.mypinata.cloud
-NEXT_PUBLIC_BASE_URL=https://disco-frames.vercel.app/
+NEXT_PUBLIC_BASE_URL=https://disco-frames.vercel.app
